--- a/StudentSupport/templates/hod/hod_manage_department.html
+++ b/StudentSupport/templates/hod/hod_manage_department.html
@@ -139,8 +139,7 @@
                     </button>
                 </div>
                 <div class="modal-body">
-                    <form method="post" action="#">
-                        {% csrf_token %}
+                    <form>
                         <div class="form-group row">
                             <label class="col-sm-4 col-form-label" for="add_Subject_Name">Subject Name : </label>
                             <div class="col-sm-8">
