--- a/StudentSupport/templates/todo.html
+++ b/StudentSupport/templates/todo.html
@@ -33,6 +33,9 @@
     // TODO : Make all the buttons consistent.
     // TODO : Display at faculty side to let them know that which subjects are they taking. give link in quick links section and make new page with datatable.
     // TODO : Make tour for every dashboard and every page.
+    // TODO : Change Email Templates.
+    // TODO : change detailed feedback > Add parameters detailes above pagination.
+    // TODO : 
     // TODO :
 
 </script>
